fix: Fix background lagging behind on mobile devices

--- a/src/app.scss
+++ b/src/app.scss
@@ -26,6 +26,7 @@ body {
     background-origin: padding-box;
     background-clip: border-box;
     background-color: #101014;
+    background-attachment: fixed;
     background-color: var(--background);
     color: var(--color);
 }
